5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4466/executions/1577_1332.log
== SUBMITION (2019-03-26 19:10:26) 
-- CODE:
aresta =5
area = 
 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.145462
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area = 
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:41) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.176741
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 3
    print(round(3/2*(3)**0.5*5**2, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:42) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.203095
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 3
    print(round(3/2*(3)**0.5*5**2, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:42) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.099556
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1332/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:42) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.144306
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 3
    print(round(3/2*(3)**0.5*5**2, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:42) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.113972
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 3
    print(round(3/2*(3)**0.5*5**2, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:11:08) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.16928
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 3
    print(round(3/2*(3)**0.5*5**2, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:11:08) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.119229
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 3
    print(round(3/2*(3)**0.5*5**2, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:11:08) 
-- CODE:
aresta =5
 
 print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.148838
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 3
    print(round(3/2*(3)**0.5*5**2, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:11:15) 
-- CODE:
aresta =5
 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.176167
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
